app/components/paperShow/components/collectionBox.scss
@import "../../../variables";

$color-mono-00: #1F2A36;
$color-mono-01: #34495e;
$color-mono-03: #77828C;
$color-mono-04: #9AA7B5;
$color-mono-06: #DAE1E8;
$color-mono-07: #F0F1F2;
$color-mono-08: #F7F9FA;
$color-mono-09: #FAFBFC;
$color-mono-10: #FDFEFF;

$color-blue-01: #133F7A;
$color-blue-03: #3e7fff;
$color-blue-07: #E6EEFF;


.fab {
  position: fixed;
  bottom: 24px;
  right: 24px;
  z-index: 100;

  * {
    margin: 0;
    padding: 0;
    font-family: "Roboto", sans-serif;
    font-size: 14px;
    line-height: 1.5;
    color: $color-mono-00;
    -webkit-font-smoothing: antialiased;        //anti-aliasing
    text-shadow: 1px 1px 1px rgba(0,0,0,0.004); //anti-aliasing
    outline: none;
    ul {list-style: none;}
  }

  .paper_item_a {
    padding: 12px 0;
    &:first-child {
      padding-top: 0;
    }
    &:not(:last-child) {
      border-bottom: 1px solid $color-mono-06;
    }
    &:hover {
      cursor: pointer;
      .paper_item_a__paper__title {
        color: $color-blue-03;
      }
    }
    &__paper {
      display: inline-block;
      vertical-align: top;
      width: 316px;
      margin-right: 16px;
      &__title {
        width: 100%;
        font-size: 14px;
        font-weight: 500;
        line-height: 1.4;
        margin-bottom: 2px;
        color: $color-blue-01;
        transition: all ease 0.2s;
      }
      &__journal_authors {
        width: 100%;
        color: $color-mono-04;
        font-size: 12px;
      }
    }
    &__memo {
      display: inline-block;
      vertical-align: top;
      width: 184px;
      &__content {
        font-size: 14px;
        line-height: 1.4;
        color: $color-mono-01;
      }
    }
  }

  .action_notification {
    position: relative;
    margin-bottom: 8px;
    * {
      font-family: "Roboto";
    }
    &__save {
      padding: 8px 20px;
      background-color: $color-mono-00;
      border-radius: 9999px;
      box-shadow: 2px 8px 8px 0px rgba(0,0,0, 0.25);
      opacity: 0;
      position: absolute;
      right: 0;
      bottom: 8px;
      transform: translateX(100%);
      transition: all ease 0.4s;
      &.show {
        opacity: 1;
        margin-right: 0;
        transform: translateX(0);
      }
      span, a {
        color: $color-mono-06;
      }
      span {
        margin-right: 4px;
      }
    }
  }
  .action_list {
    ul li {
      display: inline-block;
      position: relative;
      z-index: 1;
      box-shadow: 2px 8px 8px 0px rgba(0,0,0, 0.25);
      box-shadow: 4px 4px 24px 0px rgba(0, 0, 0, 0.5);
      box-shadow: 2px 2px 24px 0px rgba(0, 0, 0, 0.25);
      background: none;
      &:not(:last-child) {
        margin-right: 8px;
      }
      button {
        border-radius: 2px;
        padding: 12px 16px;
        line-height: 22px;
        outline: none;
        cursor: pointer;
        transition: all ease 0.2s;
        &:hover {
          background: $color-blue-03;
          color: $color-mono-08;
        }
      }
    }
    .collection_view {
      position: relative;
      z-index: 0;
      display: none;
      width: 564px;
      margin-left: 46px;
      &.show {
        opacity: 1;
        display: block;;
      }
      &__wrapper {
        position: absolute;
        padding: 24px;
        background-color: #FDFEFF;
        box-shadow: 2px 8px 8px 0px rgba(0, 0, 0, 0.25);
        width: fit-content;
        bottom: 8px;
      }
      .close_button {
        position: absolute;
        right: 24px;
        top: 24px;
        background: none;
        border: none;
        outline: none;
        cursor: pointer;
        svg {
          vertical-align: bottom;
        }
      }
      &__title {
        font-size: 16px;
        font-family: "Roboto";
        width: 100%;
        padding-bottom: 8px;
        border-bottom: 1px solid $color-mono-00;
      }
      &__list {
        margin-top: 16px;
        max-height: 324px;
        white-space: initial;
        overflow-y: scroll;
        ul {
          font-size: 0;
          li {
            font-size: 0;
            margin-right: 0;
            box-shadow: none;
          }
        }
      }
    }
    .collection_list {
      width: 188px;
      height: 0;
      opacity: 0;
      box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
      position: relative;
      z-index: 2;
      visibility: hidden;
      &.show {
        height: auto;
        opacity: 1;
        visibility: initial;
      }
      &_wrapper {
        background-color: white;
        border-radius: 2px 2px 0 0;
        ul {
          text-decoration: none;
          li {
            font-family: "Roboto";
            font-weight: 400;
            display: block;
            box-shadow: none;
            padding: 8px 16px;
            margin-right: 0;
            cursor: pointer;
            transition: all ease 0.2s;
            &:not(:last-child) {
              border-bottom: 1px solid #DAE1E8;
            }
            &:hover {
              background-color: $color-mono-07;
            }
            &.create {
              color: $color-blue-03;
            }
          }
        }
      }
    }

    .comment {
      font-size: 0;
      button {
        box-shadow: none;
        border: 1px solid $color-mono-00;
        border-right: none;
        border-radius: 0;
        font-family: "Roboto";
        vertical-align: top;
        background-color: $color-mono-10;
        &.openCollectionList {
          padding: 12px;
          border: 1px solid $color-mono-00;
          border-right: none;
          border-radius: 4px 0 0 4px;
          &:hover {
            svg * {
              color: $color-mono-08;
            }
          }
          svg {
            vertical-align: bottom;
            height: 22px;
            * {
              color: $color-mono-00;
            }
          }
        }
        &.openCollectionView {
          .collectionIcon {
            display: inline-block;
            width: 16px;
            height: 19px;
            margin-right: 4px;
            vertical-align: bottom;   
            svg use {
              color: $color-mono-00;
            }
          }
          &:hover {
            svg use {
              color: $color-mono-08;
            }
          }
        }
      }
      input {
        width: 400px;
        border: 1px solid $color-mono-00;
        border-radius: 0 4px 4px 0;
        background-color: $color-mono-10;
        color: $color-mono-00;
        padding: 12px 16px;
        line-height: 22px;
        &::placeholder {
          color: $color-mono-04;
        }
      }
    }
    .cite_this_paper, .download_pdf {
      button {
        background-color: $color-mono-08;
        border-color: $color-mono-00;
        color: $color-mono-00;
        font-family: "Roboto";
        font-weight: 700;
      }
    }

    .save_to_collection {
      button {
        border: 1px solid ;
        border-radius: 4px;
        font-family: "Roboto";
        font-weight: 700;
        transition: all ease 0.2s;
        background-color: $color-blue-03;
        border-color: $color-blue-03;
        color: $color-mono-08;
        svg use {
          color: $color-mono-08;
        }
        &:hover {
          color: $color-blue-07;
          svg use {
            color: $color-blue-07;
          }
        }
        &.saveButton {
          &Save {
            background-color: $color-blue-03;
            border-color: $color-blue-03;
            color: $color-mono-08;
          }
          &Saved {
            background-color: $color-mono-00;
            border-color: $color-mono-00;
            color: $color-mono-08;
          }
          &Remove {
            background-color: $red0;
            border-color: $red0;
            color: $color-mono-08;
          }
          &Change {
            background-color: $color-blue-03;
            border-color: $color-blue-03;
            color: $color-mono-08;
          }
        }
        &.saved {
          border-color: $color-mono-00;
          background-color: $color-mono-00;
          &:hover {
            color: $color-mono-04;
            svg use {
              color: $color-mono-04;
            }
  
          }
          &:active {
            border-color: $color-mono-03;
            background-color: $color-mono-03;
            color: $color-mono-08;
            svg use {
              color: $color-mono-08;
            }
          }
        }

        .saveButtonIcon {
          display: inline-block;
          vertical-align: bottom;
          width: 16px;
          height: 19px;
          margin-right: 4px;

        }
        span {
          color: inherit;
        }
      }
    }
  }
}

